--- a/app/src/main/res/layout/fragment_bilgi_merkezi.xml
+++ b/app/src/main/res/layout/fragment_bilgi_merkezi.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/white"
     android:paddingTop="?attr/actionBarSize">
 
     <TextView
@@ -14,8 +14,8 @@
         android:layout_marginBottom="356dp"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/white"
-        android:text="Kurumsal"
+        android:textColor="@color/black"
+        android:text="Bİlgi Merkezi"
         android:textAlignment="center"
         android:textSize="50dp"/>
 
@@ -31,8 +31,9 @@
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_nav_menu" />
 
+    <!---
     <fragment
-        android:id="@+id/nav_host_fragment_activity_main_page"
+        android:id="@+id/nav_host_fragment_bilgi_merkezi"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -43,6 +44,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:navGraph="@navigation/mobile_navigation" />
+        app:navGraph="@navigation/mobile_navigation" />  -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
