--- a/app/src/main/res/layout/fragment_hizmetler.xml
+++ b/app/src/main/res/layout/fragment_hizmetler.xml
@@ -5,9 +5,19 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/purple_700"
     android:paddingTop="?attr/actionBarSize">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="50pt"
+        android:layout_marginBottom="356dp"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/white"
+        android:text="Hizmetler"
+        android:textAlignment="center"
+        android:textSize="50dp"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
@@ -23,7 +33,7 @@
 
     <!---
     <fragment
-        android:id="@+id/nav_host_fragment_giris"
+        android:id="@+id/nav_host_fragment_hizmetler"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -37,35 +47,3 @@
         app:navGraph="@navigation/mobile_navigation" />  -->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-<!--<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp">
-
-
-
-        <androidx.constraintlayout.helper.widget.Layer
-            android:layout_width="144dp"
-            android:layout_height="322dp" />
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:srcCompat="@drawable/appback" />
-    </LinearLayout>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>-->
