--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,13 +9,13 @@
         android:id="@+id/navigation_home"
         android:name="com.example.trkpatentapp.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_ana_menü" />
 
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.trkpatentapp.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_hizmetler" />
 
     <fragment
         android:id="@+id/navigation_notifications"
