--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,19 +5,19 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginStart="0dp"
-    android:layout_marginEnd="0dp"
-    android:background="@color/purple_500"
-    android:paddingTop="?attr/actionBarSize">
+    android:background="@color/purple_500">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="fill_parent"
+        android:layout_alignParentTop="true"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:fillViewport="true">
 
             <TextView
                 android:layout_width="match_parent"
@@ -29,7 +29,6 @@
                 android:textSize="50dp"
                 app:layout_constraintBottom_toTopOf="@+id/nav_view"
                 app:layout_constraintStart_toStartOf="parent" />
-
         </LinearLayout>
     </ScrollView>
 
@@ -37,11 +36,12 @@
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         android:background="?android:attr/windowBackground"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/bottom_nav_menu"/>
 
     <!---
     <fragment
