--- a/app/src/main/res/layout/fragment_bilgi_merkezi.xml
+++ b/app/src/main/res/layout/fragment_bilgi_merkezi.xml
@@ -3,12 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
-    android:layout_marginStart="0dp"
-    android:layout_marginEnd="0dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    android:paddingTop="?attr/actionBarSize">
+    android:background="@color/white">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -78,9 +75,10 @@
                 android:layout_height="wrap_content"
                 tools:srcCompat="@tools:sample/avatars" />
 
+
+
         </LinearLayout>
     </ScrollView>
-
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
@@ -90,7 +88,8 @@
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         android:background="?android:attr/windowBackground"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/bottom_nav_menu"/>
+
 
     <!---
     <fragment
