--- a/app/src/main/res/layout/fragment_kurumsal.xml
+++ b/app/src/main/res/layout/fragment_kurumsal.xml
@@ -3,20 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
-    android:layout_marginStart="0dp"
-    android:layout_marginEnd="0dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_200"
-    android:paddingTop="?attr/actionBarSize">
+    android:background="@color/purple_200">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
@@ -29,8 +28,11 @@
         android:textAlignment="center"
         android:textSize="50dp"/>
 
+
+
     </LinearLayout>
     </ScrollView>
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="match_parent"
@@ -39,8 +41,7 @@
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
         android:background="?android:attr/windowBackground"
-        app:menu="@menu/bottom_nav_menu" />
-
+        app:menu="@menu/bottom_nav_menu"/>
     <!---
     <fragment
         android:id="@+id/nav_host_fragment_kurumsal"
