Kurumsal menu added, color scheme added (needs work)

--- a/app/src/main/res/layout/activity_loading_screen.xml
+++ b/app/src/main/res/layout/activity_loading_screen.xml
@@ -16,7 +16,7 @@
         android:visibility="visible"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:indeterminateTint="#32587b"
+        android:indeterminateTint="#222830"
         android:indeterminateTintMode="src_in"
 
         ></androidx.core.widget.ContentLoadingProgressBar>
