--- a/app/src/main/res/layout/fragment_kurumsal.xml
+++ b/app/src/main/res/layout/fragment_kurumsal.xml
@@ -5,32 +5,163 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_200">
+    android:background="@color/light_gray">
 
     <ScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:layout_marginBottom="@dimen/activity_vertical_margin">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="50pt"
-        android:layout_marginBottom="356dp"
-        app:layout_constraintBottom_toTopOf="@+id/nav_view"
-        app:layout_constraintStart_toStartOf="parent"
-        android:textColor="@color/white"
-        android:text="Kurumsal"
-        android:textAlignment="center"
-        android:textSize="50dp"/>
+        <LinearLayout
+            android:id="@+id/scrollLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/activity_vertical_margin">
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/tarihce"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50px"
+                android:layout_marginTop="50px"
+                android:layout_marginRight="50px"
+                android:layout_marginBottom="50px"
+                android:background="@drawable/circular_button"
+                android:textSize="22dp"
+                android:textColor="@color/white"
+                android:textAllCaps="false"
+                android:text="Tarihçe" />
 
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/hakkimizda"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Hakkımızda"
+                android:textAllCaps="false"
+                android:layout_marginLeft="50px"
+                android:layout_marginTop="50px"
+                android:layout_marginRight="50px"
+                android:layout_marginBottom="50px"
+                android:background="@drawable/circular_button"
+                android:textSize="22dp"
+                android:textColor="@color/white"/>
 
-    </LinearLayout>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/yonetim"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Yönetim"
+                android:textAllCaps="false"
+                android:layout_marginLeft="50px"
+                android:layout_marginTop="50px"
+                android:layout_marginRight="50px"
+                android:layout_marginBottom="50px"
+                android:background="@drawable/circular_button"
+                android:textSize="22dp"
+                android:textColor="@color/white"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/danisma"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Danışma Kurulu"
+                android:textAllCaps="false"
+                android:layout_marginLeft="50px"
+                android:layout_marginTop="50px"
+                android:layout_marginRight="50px"
+                android:layout_marginBottom="50px"
+                android:background="@drawable/circular_button"
+                android:textSize="22dp"
+                android:textColor="@color/white"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/organizasyon"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Organizasyon"
+                android:textAllCaps="false"
+                android:layout_marginLeft="50px"
+                android:layout_marginTop="50px"
+                android:layout_marginRight="50px"
+                android:layout_marginBottom="50px"
+                android:background="@drawable/circular_button"
+                android:textSize="22dp"
+                android:textColor="@color/white"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/mevzuat"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Mevzuat"
+                android:textAllCaps="false"
+                android:layout_marginLeft="50px"
+                android:layout_marginTop="50px"
+                android:layout_marginRight="50px"
+                android:layout_marginBottom="50px"
+                android:background="@drawable/circular_button"
+                android:textSize="22dp"
+                android:textColor="@color/white"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/planlar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Plan / Program / Raporlar"
+                android:textAllCaps="false"
+                android:layout_marginLeft="50px"
+                android:layout_marginTop="50px"
+                android:layout_marginRight="50px"
+                android:layout_marginBottom="50px"
+                android:background="@drawable/circular_button"
+                android:textSize="22dp"
+                android:textColor="@color/white"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/etik"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Etik Komisyonu"
+                android:textAllCaps="false"
+                android:layout_marginLeft="50px"
+                android:layout_marginTop="50px"
+                android:layout_marginRight="50px"
+                android:layout_marginBottom="50px"
+                android:background="@drawable/circular_button"
+                android:textSize="22dp"
+                android:textColor="@color/white"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/kurumsal_politikalar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Kurumsal Politikalar"
+                android:textAllCaps="false"
+                android:layout_marginLeft="50px"
+                android:layout_marginTop="50px"
+                android:layout_marginRight="50px"
+                android:layout_marginBottom="50px"
+                android:background="@drawable/circular_button"
+                android:textSize="22dp"
+                android:textColor="@color/white"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/kurumsal_kimlik"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Kurumsal Kimlik Kılavuzu"
+                android:textAllCaps="false"
+                android:layout_marginLeft="50px"
+                android:layout_marginTop="50px"
+                android:layout_marginRight="50px"
+                android:layout_marginBottom="100px"
+                android:background="@drawable/circular_button"
+                android:textSize="22dp"
+                android:textColor="@color/white"/>
+        </LinearLayout>
     </ScrollView>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
