--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,12 @@
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
+    <color name="dark_blue">#0f1217</color>
+    <color name="lighter_dark_blue">#222830</color>
+    <color name="dark_gray">#454f5c</color>
+    <color name="light_gray">#bbbbbb</color>
+    <color name="red">#bf000c</color>
+    <color name="blue">#32587b</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
